--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ readme = "README.md"
 
 [dependencies]
 uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
+
+[dev-dependencies]
+once_cell = "1.13"
