--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ readme = "README.md"
 [dependencies]
 uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
 once_cell = "1.13"
+
+[dev-dependencies]
+rayon = "1.7"
