--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "evident"
-version = "0.4.0"
+version = "0.5.0"
 edition = "2021"
 description = "Pub/Sub library using IDs to identify events."
 repository = "https://github.com/mhatzl/evident"
@@ -12,6 +12,7 @@ readme = "README.md"
 [dependencies]
 uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
 once_cell = "1.13"
+chrono = { version = "0.4", features = ["clock"] }
 
 [dev-dependencies]
 rayon = "1.7"
