--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
+uuid = { version = "1.3", features = ["v4", "fast-rng"] }
 once_cell = "1.13"
 
 [dev-dependencies]
