--- a/.github/ISSUE_TEMPLATE/bug-report-form.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report-form.yml
@@ -11,7 +11,7 @@ body:
     id: contact
     attributes:
       label: Contact Details
-      description: How can we get in touch with you if we need more info?
+      description: How can we get in touch with you if we need more information?
       placeholder: ex. email@example.com
   - type: textarea
     id: what-happened
@@ -23,7 +23,7 @@ body:
     id: version
     attributes:
       label: Version
-      description: What version of evident where you running?
+      description: What version of our software where you running?
       placeholder: ex. v1.0.1 or post the git commit hash
   - type: textarea
     id: logs
@@ -35,7 +35,7 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/mhatzl/evident/blob/main/CODE_OF_CONDUCT.md).
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/mhatzl/project-repo-template/blob/main/CODE_OF_CONDUCT.md).
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
